# picture_book_generator

./: .env.example  .env.example.web  .gitignore  DEPLOYMENT.md  Makefile  README.md  app.py  download_slides.py  install.sh  pyproject.toml  requirements-web.txt  requirements.txt
api/: main.py  schemas.py
api/routers/: generate.py
apps/api/app/: deps.py  main.py  schemas.py  service.py  store.py
apps/api/app/routes/: books.py  styles.py  tasks.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/create/: page.tsx
docs/: web_migration_architecture.md  web_mvp_quickstart.md  website_blueprint.md
src/picture_book_generator/: __init__.py  cli.py
src/picture_book_generator/core/: __init__.py  generator.py  models.py
src/picture_book_generator/prompts/: __init__.py  adapt_content.txt  all_chapters.txt  book_structure.txt  generate_from_scratch.txt
src/picture_book_generator/services/: __init__.py  content_adapter.py  knowledge_search.py  notebooklm.py  pdf_splitter.py  telegram.py
src/picture_book_generator/utils/: __init__.py  config.py
tests/: test_content_adapter.py  test_generator.py  test_knowledge_search.py  test_models.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/create/: CreateForm.tsx  page.tsx
web/app/generate/[id]/: GenerationProgress.tsx  page.tsx
web/app/result/[id]/: ResultDashboard.tsx  page.tsx
web/lib/: api.ts  i18n-provider.tsx  i18n.ts  markdown-styles.css
